pkg/extension/workspace/example/runtime/configdir/testdata/workspace8/expected/getenvoy_extension_run/envoy.tmpl.yaml
#
# Example Envoy configuration.
#
admin: {"accessLogPath":"/dev/null","address":{"socketAddress":{"address":"127.0.0.1","portValue":9901}}}

static_resources:
  listeners:
    - name: ingress
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: mock_service
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        configuration:
                          '@type': type.googleapis.com/google.protobuf.StringValue
                          value: "KEY=VALUE\nANOTHER=CONFIG"
                        name: "mycompany.filters.http.my_http_filter"
                        root_id: "mycompany.filters.http.my_http_filter"
                        vm_config:
                          vm_id: "mycompany.filters.http.my_http_filter"
                          runtime: envoy.wasm.runtime.v8
                          code: {"local":{"filename":"/path/to/extension.wasm"}}
                  - name: envoy.filters.http.router

    - name: mock
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 10001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: mock
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: mock
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "Hi from mock service!\n"
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: mock_service
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 10001
